# atmo

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yaml
atmo/: Cargo.toml
atmo/src/: lib.rs
atmo_api/: Cargo.toml
atmo_api/src/: generated.rs  lib.rs
atmo_api/src/tests/: mod.rs
atmo_api/src/tests/app_bsky/: actor.rs
atmo_api/src/tests/com_atproto/: server.rs
atmo_codegen/: Cargo.toml
atmo_codegen/src/: enum_.rs  lib.rs  module.rs  namespace.rs  rpc.rs  struct_.rs  structs.rs
atmo_core/: Cargo.toml
atmo_core/proptest-regressions/: did.txt
atmo_core/src/: at_uri.rs  blob.rs  bytes.rs  cid.rs  datetime.rs  did.rs  error.rs  event.rs  handle.rs  lib.rs  nsid.rs  nullable.rs  parse.rs  rkey.rs  stream.rs  tid.rs  union_.rs  unknown.rs  xrpc.rs
atmo_jetstream/: Cargo.toml
atmo_jetstream/src/: error.rs  lib.rs
atmo_lexicon/: Cargo.toml
atmo_lexicon/src/: lib.rs
bluemorpho_codegen/: Cargo.toml
bluemorpho_codegen/src/: lib.rs
examples/jetstream/: Cargo.toml
examples/jetstream/src/: main.rs
examples/session/: Cargo.toml
examples/session/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: at_uri.rs  did.rs  handle.rs  rkey.rs  tid.rs
neophron_codegen/: Cargo.toml
neophron_codegen/src/: lib.rs  module.rs  structs.rs  unions.rs
src/: at_uri.rs  bytes.rs  cid.rs  datetime.rs  did.rs  error.rs  handle.rs  lexicon.rs  lib.rs  nsid.rs  nullable.rs  parse.rs  rkey.rs  tid.rs  unknown.rs  xrpc.rs
