[package]
name = "atmo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "atmo_api",
    "atmo_codegen",
    "atmo_lexicon",
]

[workspace.dependencies]
atmo = { path = "." }
atmo_lexicon = { path = "atmo_lexicon" }

cid = "0.11.1"
jiff = "0.1.13"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
serde_ipld_dagcbor = "0.6.1"
url = { version = "2.5.2", features = ["serde"] }

[dependencies]
cid = { workspace = true }
jiff = { workspace = true }
http = { version = "1.1.0" }
reqwest = { version = "0.12.8", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = "0.1.16"
serde_ipld_dagcbor = { workspace = true }
url = { workspace = true }
