[workspace]
resolver = "2"
members = [
    "atmo",
    "atmo_api",
    "atmo_codegen",
    "atmo_core",
    "atmo_lexicon",

    "examples/session",
]

[workspace.dependencies]
# Workspace crates.
atmo = { path = "atmo" }
atmo_api = { path = "atmo_api" }
atmo_core = { path = "atmo_core" }
atmo_lexicon = { path = "atmo_lexicon" }

# Workspace crate dependencies.
bytes = "1.8.0"
cid = "0.11.1"
data-encoding = "2.6.0"
http = { version = "1.1.0" }
jiff = "0.1.13"
percent-encoding = "2.3.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
serde_ipld_dagcbor = "0.6.1"
url = { version = "2.5.2", features = ["serde"] }

# Example dependencies.
dialoguer = { version = "0.11.0" }
tokio = "1.41.0"
