[workspace]
resolver = "2"
members = [
    "atmo",
    "atmo_api",
    "atmo_codegen",
    "atmo_core",
    "atmo_jetstream",
    "atmo_lexicon",
    "examples/jetstream",

    "examples/session",
    "fuzz",
]

[workspace.metadata.release]
# Version all crates in lockstep.
shared-version = true
tag-name = "v{{version}}"

[workspace.dependencies]
# Workspace crates.
atmo = { path = "atmo" }
atmo_api = { path = "atmo_api" }
atmo_core = { path = "atmo_core" }
atmo_jetstream = { path = "atmo_jetstream" }
atmo_lexicon = { path = "atmo_lexicon" }

# Workspace crate dependencies.
bytes = "1.8.0"
cid = "0.11.1"
data-encoding = "2.6.0"
erased-serde = "0.4.5"
futures = "0.3.31"
http = { version = "1.1.0" }
http-body-util = { version = "0.1.2" }
ipld-core = { version = "0.4.1", features = ["serde"] }
jiff = "0.1.13"
percent-encoding = "2.3.1"
proptest = "1.5.0"
proptest-derive = " 0.5.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
serde_ipld_dagcbor = "0.6.1"
serde_urlencoded_xrpc = "0.1.0"
tracing = "0.1.40"
url = { version = "2.5.2", features = ["serde"] }
zstd = { version = "0.13.2" }

# Example dependencies.
dialoguer = { version = "0.11.0" }
tokio = "1.41.0"
