[package]
name = "atmo"
version = "0.1.0"
edition = "2021"

[dependencies]
atmo_api = { workspace = true }
atmo_core = { workspace = true }
http = { workspace = true }
reqwest = { version = "0.12.8", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
