[package]
name = "atmo_api"
version = "0.1.0"
edition = "2021"

[dependencies]
atmo_core = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
cid = { workspace = true }
erased-serde = { workspace = true }
http = { workspace = true }
ipld-core = { workspace = true, features = ["serde"] }
jiff = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
url = { workspace = true }
