[package]
name = "atmo_api"
version = "0.1.0"
edition = "2021"

[dependencies]
atmo_core = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
cid = { workspace = true }
erased-serde = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
ipld-core = { workspace = true, features = ["serde"] }
jiff = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
serde_urlencoded_xrpc = { workspace = true }
url = { workspace = true }
