[package]
name = "atmo_core"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
bytes = { workspace = true, features = ["serde"] }
cid = { workspace = true }
data-encoding = { workspace = true }
erased-serde = { workspace = true }
ipld-core = { workspace = true }
jiff = { workspace = true }
http = { workspace = true }
percent-encoding = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
serde_ipld_dagcbor = { workspace = true }
url = { workspace = true }

[dev-dependencies]
cid = { workspace = true, features = ["arb"] }
proptest = { workspace = true }
proptest-derive = { workspace = true }
