[package]
name = "neophron_codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
neophron = { workspace = true }
heck = "0.5.0"
proc-macro2 = "1.0.88"
quote = "1.0.37"
serde_json = { workspace = true }
serde_path_to_error = "0.1.16"
syn = { version = "2.0.82", features = ["full"] }
walkdir = "2.5.0"
