[package]
name = "jetstream"
version = "0.1.0"
edition = "2021"

[dependencies]
atmo_jetstream = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { version = "0.7.1" }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls", "url"] }
url = { workspace = true }
