[package]
name = "jetstream"
version = "0.1.0"
edition = "2021"

[dependencies]
atmo = { workspace = true, features = ["jetstream"] }
futures = { workspace = true }
pretty_env_logger = "0.5"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls", "url"] }
tracing = { workspace = true }
url = { workspace = true }
zstd = { workspace = true }
